# rec-sents

./: rec-sents  rec-sents.cabal
src/: RecSents.hs
