name:            rec-sents
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        <syn>
build-type:      Simple
build-depends:   base

executable:      rec-sents
main-is:         Main.hs
hs-source-dirs:  src

exposed-modules: rec-sents
hs-source-dirs:  src
