name:            rec-sents
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        record spoken sentences for foreign language practice
build-type:      Simple
build-depends:
    base
  , FUtil
  , process
  , split
  , unix

executable:      rec-sents
main-is:         RecSents.hs
hs-source-dirs:  src
ghc-options:     -Wall
